/* 
  Localizable.strings
  CounterApp

  Created by Gerardo Ojeda on 11-02-19.
  Copyright © 2019 Gerardo Ojeda. All rights reserved.
*/

/*---------------- Btns Titles ----------------*/
"ADD" = "Add";
"EDIT" = "Edit";
"DELETE" = "Delete";

/*---------------- Alert Titles ----------------*/

"ALERT_TITLE_ADD_COUNTER" = "Add Counter";
"MESSAGE_TITLE_ADD_COUNTER" = "Input name counter";
"ALERT_TITLE_BTN_CANCEL" = "Cancel";
"ALERT_TITLE_BTN_CONFIRM" = "Ok";
"ALERT_TITLE_ERROR" = "Error";

/*---------------- Bar Button Titles ----------------*/

"EDIT_TITLE_BAR_BUTTON" = "Edit";
"DONE_TITLE_BAR_BUTTON" = "Done";
"ADD_TITLE_BAR_BUTTON" = "Add";

/*---------------- EMPTY Titles ----------------*/

"TITLE_EMPTY_VIEW" = "You don't have any counter";
"SUBTITLE_EMPTY_VIEW" = "Add a counter";

/*-------------- Message Errors --------------*/
"DECODING_ERROR" = "";
"CONECCTION_ERROR" = "";
