...
            }
        }
        confirmAction.isEnabled = false
        
        alert.addTextField { (textfield) in
            
            textfield.accessibilityIdentifier = "textfieldNewCounter"
            
            NotificationCenter.default.addObserver(forName: .UITextFieldTextDidChange, object: textfield, queue: OperationQueue.main, using:
                {_ in
                    let textCount = textfield.text?.trimmingCharacters(in: .whitespacesAndNewlines).count ?? 0
                    let textIsNotEmpty = textCount > 0
                    
...
